GNOME Bugzilla – Bug 639502
[camerabin] should not re-create preview pipeline when setting new preview caps
Last modified: 2011-01-31 15:44:20 UTC
Setting the preview-caps property for camerabin causes destroying of existing preview pipeline and re-creation. This affects camerabin performance because creation and linking of the preview pipeline elements is slow. Instead of re-creating the pipeline camerabin should just replace the existing caps.
Created attachment 178302 [details] [review] Proposed patch to optimize setting preview caps Proposed patch to optimize setting preview caps.
Pushed: ad019102e5d3b354c48eba7fac0591810d7776c6